src/main/java/mml2mid/mml.jjt
//オプション定義
options{
    STATIC=false;
    MULTI=true;
    VISITOR=true;
    UNICODE_INPUT=true;
}

//パーサークラスの定義
PARSER_BEGIN(MmlParser)
package mml2mid.parser;
public class MmlParser{

}
PARSER_END(MmlParser)

//トークンの定義
SKIP:
{
    " " | "\r" | "\t" | "\n"
}
TOKEN:
{
        // number
        <NumberZeroToken : "0">
    |   <NonZeroNumberToken : ["1" - "9"]>
    |   <Hex10to15Token : ["a" - "f"]>
    |   <HexNumberPrefixToken : "0x">

        // scale
    |   <OctaveToken : ["2" - "8"]>
    |   <ScaleToken : ["a" - "g"]>
    |   <DotToken : ".">

        // Command
    |   <LengthCommandToken : "l">
    |   <OctaveCommandToken : "o">
    |   <AccidentalsCommandToken : ["+","-"]>
    |   <RestCommandToken : "r">
    |   <IncreaseOctaveCommandToekn : "<">
    |   <DecreaseOctaveCommandToken : ">">
}

//文法の定義
ASTStart Start() #void:
{}
{
    MMLCommands() { return jjtThis;}
}

void MMLCommands() #void:
{}
{
    (Command())*
}

void Command() #void:
{}
{
    // notes
    SetLength()
    | SetOctave()
    | SetScale()
    | SetRest()
    // change octave
    | IncreaseOctave()
    | DecreaseOctave()
}

void SetLength() #void:
{}
{
    <LengthCommandToken> Length()
}

void SetOctave() :
{}
{
    <OctaveCommandToken> <OctaveToken>
}

void SetScale() :
{}
{
    <ScaleToken>
    (<AccidentalsCommandToken>)?
    (Length())?
    (<DotToken>)*
}

void SetRest() :
{}
{
    <RestCommandToken>
    (Length())?
    (<DotToken>)*
}

void IncreaseOctave() :
{}
{
    <IncreaseOctaveCommandToekn>
}

void DecreaseOctave() :
{}
{
    <DecreaseOctaveCommandToken>
}

void Length() #void:
{}
{
    DecimalNumber()
}

void DecimalNumber() #void:
{}
{
    <NonZeroNumberToken> (
          <NumberZeroToken>
        | <NonZeroNumberToken>
    )*
}
